# 500_ED_Risk_Retro_BP

./: .gitignore  PROJECT_KNOWLEDGE.md  README.md  current_defaults.txt  fix_imports.sh  fix_penalty_rates.py  fix_penalty_rates_v2.py  generate_developer_returns_report.py  handoff_prompt.md  portfolio_summary.py  project_summary.md  pyproject.toml  requirements.txt  run_all_portfolio_reports.sh  run_analysis_cli.py  run_building_2952_comprehensive_analysis.py  run_comprehensive_portfolio_analysis.py  run_portfolio_analysis_corrected.py  run_top_10_analysis.py  run_unified_analysis.py  run_unified_analysis_v2.py  simple_hvac_test.py  test_2028_fix.py  test_enhanced_analysis.py  test_hvac_direct.py
archive/: README.md  energize_denver_penalty_summary.md  requirements.txt.20250718_134638  run_portfolio_analysis_v2.py  setup_log.txt
backup_before_cleanup/: PROJECT_KNOWLEDGE.md  archive_for_claude.py  check_data_freshness.py  execute_portfolio_analysis.py  final_cleanup.py  run_improved_portfolio_analysis.py  run_mai_portfolio_analysis.py  run_portfolio_analysis_v3.py  run_refined_portfolio_analysis.py  setup.py
backup_output_standardization/: generate_developer_returns_report.py  run_comprehensive_portfolio_analysis.py  run_unified_analysis_v2.py
docs/: EUI_Calculations_Summary.md  Improvement_Analysis.md  penalty_calculation_source_of_truth.md  penalty_math_explained_v2.md  penalty_rate_update_log.md
outputs/: der_clusters.geojson  der_clusters_analysis.csv  der_clusters_epb_highlighted.geojson  der_clusters_with_epb.csv  epb_der_clusters_report.csv  (+13 more)
(+199 files in other folders)
